# Kerala-Ayurveda-Agentic-AI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_api.py
docs/: api_reference.md  architecture.md  folder_structure.md  overview.md  rag_pipeline.md
docs/archive/: legacy_explanation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  QueryPanel.jsx  ResultsPanel.jsx  Sidebar.jsx  StatusBadge.jsx
scripts/: main_pipeline.py  run_evaluation.py  setup.sh
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  langgraph_workflow.py
src/api/: __init__.py  main.py  ui.py
src/data_processing/: chunker.py  document_loader.py
src/evaluation/: __init__.py  metrics.py
src/knowledge_graph/: ayurveda_kg.py
src/retrieval/: corrective_rag.py  hybrid_retriever.py  query_transformer.py
tests/: test_components.py
